# docker-api-swagger-oatpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-alpine  Dockerfile-alpine-3.13  Dockerfile-alpine-prod  Dockerfile-debian  Dockerfile-debian-bullseye  Dockerfile-debian-buster  Dockerfile-debian-prod  Makefile  README.md  compose-alpine-prod.yaml  compose-alpine.yaml  compose-debian-prod.yaml  compose-debian.yaml  compose.yaml  dev  docker-compose-alpine-3.13.yaml  docker-compose-debian-bullseye.yaml  docker-compose-debian-buster.yaml  docker-compose-debian.yaml  docker-compose.yaml  run  run.sh
res/: index.html  swagger-initializer.js  swagger.json
src/: App.cpp  AppComponent.hpp  SwaggerComponent.hpp
src/controller/: DockerAPIController.hpp  SwaggerController.hpp
src/dto/: DTOs.hpp
src/swagger/: Resources.cpp  Resources.hpp  Types.cpp  Types.hpp
src/utils/: ColorUtils.hpp  HttpStatusUtils.hpp  JSONUtils.hpp  StatusUtils.hpp
test/: tests.cpp
utility/: install-oatpp-modules-dev.sh  install-oatpp-modules.sh
